--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "grunt-coffeelint": "0.0.7"
     },
     "dependencies": {
-        "opencv": "git+http://github.com/notcoffeetable/node-opencv.git"
+        "opencv": "git+http://github.com/notcoffeetable/node-opencv.git",
+        "makeitso": "git+http://github.com/bengfarrell/makeitso.git"
     },
     "engines": {
         "node": ">=0.8.0"
